--- a/client/index.html
+++ b/client/index.html
@@ -4,26 +4,34 @@
         <meta charset="utf-8">
         <title>Tri Pham's Portfolio</title>
         <!-- Boostrap 4 Alpha CND -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script> -->
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="assets/css/main.css">
         <!-- Bower Components -->
         <script src="angular/angular.min.js" charset="utf-8"></script>
         <script src="angular-route/angular-route.min.js" charset="utf-8"></script>
 		<script src="angular-cookies/angular-cookies.js" charset="utf-8"></script>
         <!-- Routes -->
-        <script src="routes.js" charset="utf-8"></script>
-		<script src="assets/app.js" charset="utf-8"></script>
+		<script src="assets/js/app.js" charset="utf-8"></script>
         <!-- Controllers -->
 
         <!-- Factories -->
 
     </head>
     <body>
-        <h1>Hello World</h1>
-        <div class="" ng-view="">
-            <!-- Where the magic happens (partials)-->
+        <div class="container lightGreen pullDown">
+            <a href="">Home</a>
+            <a href="">Works</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
+        </div>
+        <div class="">
+            <div class="" ng-view="">
+                <!-- Where the magic happens (partials)-->
+            </div>
         </div>
     </body>
 </html>
